# fsw

./: .gitignore  CHANGES.md  LICENSE.md  README.md  changes.md  pyproject.toml  readme.md  requirements.txt  setup.py
fsw/: helpers.py
fsw/forms/: __init__.py  csrf.py  mixins.py  model.py  models.py
fsw/forms/mixins/: csrf.py  model.py
fsw/models/: __init__.py  base.py  crud.py  delete.py  id.py  mixins.py  name.py  save.py  tablename.py  timestamp.py
fsw/models/mixins/: crud.py  id.py  name.py
fsw/views/: __init__.py  crud.py  form.py  forms.py  model.py  models.py  redirect.py  redirects.py  template.py  templates.py
