[project]
name = "fsw"
version = "0.3.0"
description = "A modular Flask toolkit."
readme = "README.md"
authors = [
    {name = "Bhushan Mohanraj"},
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3,<3",
    "SQLAlchemy>=2.0,<3",
    "WTForms>=3.0,<4",
]

[project.urls]
Repository = "https://github.com/bhushan-mohanraj/fsw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_single_line = true
